--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -54,6 +54,18 @@ $h5-font-size: 0.742 * $base-font-size;
 $h6-font-size: 0.618 * $base-font-size;
 
 
+// ============================================================================
+//    Non-semantic grid support
+//=============================================================================
+
+//@import "susy-grid";
+
+//$total-columns  : 12;             // a 12-column grid
+//$column-width   : 4em;            // each column is 4em wide
+//$gutter-width   : 1em;            // 1em gutters between columns
+//$grid-padding   : $gutter-width;  // grid-padding equal to gutters
+
+
 // Crossbrowser font face example
 
 //@font-face {
