--- a/sass/includes/_b.scss
+++ b/sass/includes/_b.scss
@@ -44,22 +44,13 @@
 
 // Font size
 
-.i-emph_fz_sm {
-	font-size: .8em;
-}
+.i-emph_fz_sm {}
 
-.i-emph_fz_md {
-	font-size: 1.28em;
-}
+.i-emph_fz_md {}
 
-.i-emph_fz_big {
-	font-size: 1.57em;
-	line-height: 1.1em;
-}
+.i-emph_fz_big {}
 
-.i-emph_fz_huge {
-	font-size: 3em;
-}
+.i-emph_fz_huge {}
 
 .i-emph_serif {
 	font-family: $serif;
