--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,6 +21,7 @@
 
 @import "includes/a";
 @import "includes/b";
+@import "includes/c";
 
 // Common styles
 // --------------------------------------------------------------------------
@@ -46,11 +47,6 @@
 //@import "plugins/custom-selectbox";
 //@import "plugins/jquery-checkbox";
 //@import "plugins/fancybox";
-
-// Mobile device support
-// --------------------------------------------------------------------------
-
-//@import "media/screen";
 
 // Print styles
 // --------------------------------------------------------------------------
