--- a/sass/blocks/_collapse.scss
+++ b/sass/blocks/_collapse.scss
@@ -18,7 +18,7 @@
 }
 
 .js-collap-content {
-	margin: 0 !important; // prevent jquery slideUp-Down bounce
+	overflow: hidden; // prevent jquery slideUp-Down bounce
 }
 
 
@@ -32,7 +32,6 @@
 .collapse-content__title {}
 
 .collapse-content__details {
-	// NB! don`t use margin on this elem. Paddings only.
 	padding: 20px;
 }
 
